--- a/02-fe/01-intro-e-js-assincrono/dia-03-casadecambio/package.json
+++ b/02-fe/01-intro-e-js-assincrono/dia-03-casadecambio/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "selectpet",
+  "name": "dia-03-casadecambio",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "sweetalert2": "^11.7.3",
     "vite": "^4.1.4"
   },
   "type": "module"
